# compton-npac

./: ComptonAnalysis.C  Integration_fitting_1274.py  KN_efficiency_2sigma.py  README.md  compton.py  compton_105_Na-22-colimated2ndRun.setup  compton_120_Na-22-colimated2ndRun.setup  compton_135_Na-22-colimated2ndRun.setup  compton_150_Na-22-colimated2ndRun.setup  compton_15_Na-22-coimated2ndRun.setup  compton_30_Na-22-coimated2ndRun.setup  compton_60_Na-22-colimated2ndRun.setup  err.txt  fit_2D_gauss.C  fit_bicb  fit_bicb.C  fit_bigaus.C  fit_compton.py  fit_output.root  plot.py  plotEvsAng.C  plot_KN.py  plot_KN_efficiency_2sigma.py  plot_KN_efficiency_Amplitude.py  plot_KN_efficiency_Amplitude_1275.py
Calibration/: Bi-207.setup  Co-60.setup  Cs-137.setup  Na-22.setup  bkg.py  calibration.py  calibration.root  calibration_efficiency.py  response_matrix.py
compton_30_Na-22-coimated2ndRun.fast/: compton_30_Na-22-coimated2ndRun_0001.fast
compton_75_Na-22-colimated2ndRun.fast/: compton_75_Na-22-colimated2ndRun_0001.fast
compton_angles_Na-22-colimated/: .fit_compton_511_bigaus.py.swp  Attenuation_process.py  Integration_fitting.py  compton.py  compton_0_Na-22-colimated.setup  compton_105_Na-22-colimated.setup  compton_120_Na-22-colimated.setup  compton_150_Na-22-colimated.setup  compton_15_Na-22-colimated.setup  compton_30_Na-22-colimated.setup  compton_45.py  compton_45_Na-22-colimated.setup  compton_45_Na-22_colimated.setup  compton_60_Na-22-colimated.setup  compton_75_Na-22-colimated.setup  compton_90_Na-22-colimated.setup  compton_CB.py  compton_KN.py  fit_bigaus  fit_compton.py  fit_compton_511_bigaus.py  fit_compton_integration_errors_511.py  fit_compton_integration_errors_511_iminuit.py  read_compton.py
compton_angles_Na-22-colimated-2ndRun/: coincidence_45_moments.root  compton_45_Na-22-colimated2ndRun.setup  compton_75_Na-22-colimated2ndRun.setup  compton_90_Na-22-2ndRun.setup  fit_2D_gauss.C
compton_angles_Na-22-colimated-2ndRun/compton_105_Na-22-colimated2ndRun.fast/: compton_105_Na-22-colimated2ndRun_0001.fast
compton_angles_Na-22-colimated-2ndRun/compton_15_Na-22-coimated2ndRun.fast/: compton_15_Na-22-coimated2ndRun_0001.fast
compton_angles_Na-22-colimated-2ndRun/output_cb2d_scipyfit_overlay/: coinc_105.root  coinc_120.root  (+3 more)
geant4/Na22Compton/: =2.13.3  CMakeLists.txt  run.mac
geant4/Na22Compton/src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorHit.cc  DetectorHit.hh  DetectorMessenger.cc  DetectorMessenger.hh  DetectorSD.cc  DetectorSD.hh  EventAction.cc  EventAction.hh  NaISD.cc  NaISD.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  main.cc
output/: coinc_0.root  coinc_105.root  coinc_120.root  coinc_135.root  coinc_15.root  coinc_150.root  coinc_165.root  coinc_30.root  coinc_45.root  coinc_60.root  coinc_75.root  coinc_90.root  histogram_data.root
output_cb2d_scipyfit_overlay/: coinc_45.root  coinc_60.root
pyfasterac/: .gitignore  CMakeLists.txt  Dockerfile  README.md  add_to_bashrc.sh  fastreader.cpp  fastreader.h  pouette_0001.fast  pybind_pyfasterac.cpp  test_pyfasterac.py
pyfasterac/install/include/fasterac/: electrometer.h  fasterac.h  jdb_hv.h  qtdc.h  rf.h  rf_caras.h  sampler.h
pyfasterac/install/lib/: libfasterac.so.0  libfasterac.so.0.0.0
pyfasterac/install/lib/pkgconfig/: libfasterac.pc
pyfasterac/install/share/fasterac/examples/faster_to_root/: Makefile  group2tree_bis.C
pyfasterac/install/share/fasterac/examples/misc/: TEST.sh  faster_file_cut_labels.c  spectro_info.c
pyfasterac/install/share/fasterac/examples/oscillo/: osci_sum.c  oscigraph.c
pyfasterac/install/share/fasterac/examples/osciroot/: Oscillo.C  Oscillo.h  oscillo_faster2tree.C
pyfasterac/install/share/fasterac/src/dmo/: faster_reader_demo_code.c.in
pyfasterac/install/share/fasterac/src/lib/: adc.c  fast_data.c  jdb_hv.c  plas.c  rf.c  sampling.c  spectro.c  utils.c
pyfasterac/install/share/fasterac/src/lib/fasterac/: adc_caras.h  qdc_caras.h  sampling.h  smart.h
pyfasterac/install/share/fasterac/src/prog/: faster_disfast.c  faster_file_is_sorted.c  faster_file_ungroup.c
pyfasterac/install/share/man/man1/: faster_file_display.1
pyfasterac/install/share/man/man3/: faster_buffer_reader_next.3
(+12 files in other folders)
